DEW2020: Add speakers to program schedule; add links to speakers' professional websites

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -333,7 +333,19 @@
                                 <td>6:10 AM</td>
                                 <td>9:10 AM</td>
                                 <td>2:10 PM</td>
-                                <td>Invited Talks 1/3</td>
+                                <td><b>Invited talk: <a href="#ben-hutchinson" class="page-scroll" style="color: white; text-decoration: underline">Ben Hutchinson</a></b></td>
+                            </tr>
+                            <tr>
+                                <td>6:30 AM</td>
+                                <td>9:30 AM</td>
+                                <td>2:30 PM</td>
+                                <td><b>Invited talk: <a href="#ian-soboroff" class="page-scroll" style="color: white; text-decoration: underline">Ian Soboroff</a></b></td>
+                            </tr>
+                            <tr>
+                                <td>6:50 AM</td>
+                                <td>9:50 AM</td>
+                                <td>2:50 PM</td>
+                                <td><b>Invited talk: <a href="#andrea-olgiati" class="page-scroll" style="color: white; text-decoration: underline">Andrea Olgiati</a></b></td>
                             </tr>
                             <tr>
                                 <td>7:10 AM</td>
@@ -357,7 +369,19 @@
                                 <td>8:00 AM</td>
                                 <td>11:00 AM</td>
                                 <td>4:00 PM</td>
-                                <td>Invited Talks 2/3</td>
+                                <td><b>Invited talk: <a href="#emily-dinan" class="page-scroll" style="color: white; text-decoration: underline">Emily Dinan</a></b></td>
+                            </tr>
+                            <tr>
+                                <td>8:20 AM</td>
+                                <td>11:20 AM</td>
+                                <td>4:20 PM</td>
+                                <td><b>Invited talk: <a href="#aleksander-madry" class="page-scroll" style="color: white; text-decoration: underline">Aleksander Madry</a></b></td>
+                            </tr>
+                            <tr>
+                                <td>8:40 AM</td>
+                                <td>11:40 AM</td>
+                                <td>4:40 PM</td>
+                                <td><b>Invited talk: <a href="#quang-duong" class="page-scroll" style="color: white; text-decoration: underline">Quang Duong</a></b></td>
                             </tr>
                             <tr>
                                 <td>9:00 AM</td>
@@ -369,7 +393,7 @@
                                 <td>9:10 AM</td>
                                 <td>12:10 PM</td>
                                 <td>5:10 PM</td>
-                                <td>Invited Talks 3/3</td>
+                                <td><b>Invited talk: <a href="#peter-hallinan" class="page-scroll" style="color: white; text-decoration: underline">Peter Hallinan</a></b></td>
                             </tr>
                             <tr>
                                 <td>9:30 AM</td>
@@ -519,7 +543,7 @@
             <div id="aleksander-madry" class="col-lg-5 col-lg-offset-1" style="padding-right: 40px">
                 <img src="img/keynotes/aleksander_madry.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Aleksander Madry (MIT)</h2>
+                <h2 class="section-heading text-center"><a href="https://people.csail.mit.edu/madry/" target="_blank">Aleksander Madry (MIT)</a></h2>
                 <hr class="primary">
                 <h3 class="text-center">What Do Our Models Learn?</h3><br>
                 <p>
@@ -542,7 +566,7 @@
             <div id="emily-dinan" class="col-lg-5" style="padding-left: 40px">
                 <img src="img/keynotes/emily_dinan.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Emily Dinan (Facebook AI)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/emily-d-4553b9194/" target="_blank">Emily Dinan (Facebook AI)</a></h2>
                 <hr class="primary">
                 <h3 class="text-center">Adversarial Data Collection for Chatbot Safety</h3><br>
                 <p>
@@ -563,7 +587,7 @@
             <div id="ian-soboroff" class="col-lg-5 col-lg-offset-1" style="padding-right: 40px">
                 <img src="img/keynotes/ian_soboroff.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Ian Soboroff (NIST)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.nist.gov/people/ian-soboroff" target="_blank" style="color: white">Ian Soboroff (NIST)</a></h2>
                 <hr class="light">
                 <h3 class="text-center">TREC: Building datasets within a community of use</h3><br>
                 <p>
@@ -578,7 +602,7 @@
             <div id="quang-duong" class="col-lg-5" style="padding-left: 40px">
                 <img src="img/keynotes/quang_duong.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Quang Duong (Google Health)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/quang-duong-6667774/" target="_blank" style="color: white">Quang Duong (Google Health)</a></h2>
                 <hr class="light">
                 <h3 class="text-center">Asynchronous adjudication in labeling medical data: lessons, improvements and expansions</h3><br>
                 <p>
@@ -601,7 +625,7 @@
             <div id="andrea-olgiati" class="col-lg-5 col-lg-offset-1" style="padding-right: 40px">
                 <img src="img/keynotes/andrea_olgiati.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Andrea Olgiati (Amazon AI)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/andreaolgiati/" target="_blank">Andrea Olgiati (Amazon AI)</a></h2>
                 <hr class="primary">
                 <h3 class="text-center">Title: TBD</h3><br>
                 <p>
@@ -616,7 +640,7 @@
             <div id="peter-hallinan" class="col-lg-5" style="padding-left: 40px">
                 <img src="img/keynotes/peter_hallinan.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Peter Hallinan (AI & Data @ Amazon)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/pwhallinan/" target="_blank">Peter Hallinan (AI & Data @ Amazon)</a></h2>
                 <hr class="primary">
                 <h3 class="text-center">Getting good data faster</h3><br>
                 <p>
@@ -637,7 +661,7 @@
             <div id="ben-hutchinson" class="col-lg-5 col-lg-offset-1" style="padding-right: 40px">
                 <img src="img/keynotes/ben_hutchinson.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
                 <br>
-                <h2 class="section-heading text-center">Ben Hutchingson (Google Research)</h2>
+                <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/ben-hutchinson-ab56464/" target="_blank" style="color: white">Ben Hutchingson (Google Research)</a></h2>
                 <hr class="light">
                 <h3 class="text-center">Title: TBD</h3><br>
                 <p>
