DEW2020: Added Andrea Olgiati's bio and talk title+abstract

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -634,15 +634,15 @@
                 <br>
                 <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/andreaolgiati/" target="_blank">Andrea Olgiati (Amazon AI)</a></h2>
                 <hr class="primary">
-                <h3 class="text-center">Title: TBD</h3><br>
+                <h3 class="text-center">Data =? Software</h3><br>
                 <p>
-                    Abstract: TBD
+                    Managing large amounts of data in a rigorous way is key to the success of ML initiatives. Yet, we still find that many organizations often do not have a complete view of their data, leading to sub-optimal and biased solutions. What can we learn from the world of software development to build a better-controlled system? How can the creation of controlled datasets become less of an art and more of a science?
                 </p>
-                <!-- <hr class="primary">
+                <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
                 <p>
-                    Bio content
-                </p> -->
+                    Andrea is a Senior Principal Engineer at AWS, where he is the technical leader for the AWS SageMaker managed ML platform. In the past he has worked on computer vision, databases and chip design. He holds a Laurea degree from Politecnico di Milano in Italy.
+                </p>
             </div>
             <div id="peter-hallinan" class="col-lg-5" style="padding-left: 40px">
                 <img src="img/keynotes/peter_hallinan.jpg" class="img-responsive" style="border-radius: 100%; width: 100%; height: auto; margin: 0 auto" alt="">
