Fix links with localhost

--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -29,15 +29,15 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website, blog" />
   <meta property="og:image"
-    content="http://localhost:4000/assets/img/logo.png" />
+    content="http://eval.how/assets/img/logo.png" />
   <meta property="og:site_name" content="REAIS Workshop at HCOMP 2020" />
-  <meta property="og:url" content="http://localhost:4000/" />
+  <meta property="og:url" content="http://eval.how/" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="REAIS Workshop at HCOMP 2020" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image"
-    content="http://localhost:4000/assets/img/logo.png" />
+    content="http://eval.how/assets/img/logo.png" />
 
   <title>REAIS Workshop at HCOMP 2020</title>
 </head>
@@ -49,13 +49,13 @@
   <nav>
     <ul>
       
-      <a href="http://localhost:4000/reais-2020/">
+      <a href="http://eval.how/reais-2020/">
         <li class="current btn-nav">Home</li>
       </a>
-      <a href="http://localhost:4000/reais-2020/program.html">
+      <a href="http://eval.how/reais-2020/program.html">
         <li class="btn-nav">Program</li>
       </a>
-      <!--<a href="http://localhost:4000/reais-2020/portfolio">
+      <!--<a href="http://eval.how/reais-2020/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>-->
       
