--- a/reais-2020/program.html
+++ b/reais-2020/program.html
@@ -29,15 +29,15 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website, blog" />
   <meta property="og:image"
-    content="http://localhost:4000/assets/img/logo.png" />
+    content="http://eval.how/assets/img/logo.png" />
   <meta property="og:site_name" content="REAIS Workshop at HCOMP 2020" />
-  <meta property="og:url" content="http://localhost:4000/program.html" />
+  <meta property="og:url" content="http://eval.how/program.html" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="REAIS Workshop at HCOMP 2020" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image"
-    content="http://localhost:4000/assets/img/logo.png" />
+    content="http://eval.how/assets/img/logo.png" />
 
   <title>REAIS Workshop at HCOMP 2020</title>
 </head>
@@ -49,11 +49,11 @@
   <nav>
     <ul>
       
-      <a href="http://localhost:4000/reais-2020/">
+      <a href="http://eval.how/reais-2020/">
         <li class="btn-nav">Home</li>
       </a>
       <li class="current">Program</li>
-      <!-- <a href="http://localhost:4000/reais-2020/portfolio">
+      <!-- <a href="http://eval.how/reais-2020/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a> -->
       
