--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -311,7 +311,7 @@
                 <h2 class="section-heading text-center">Program</h2>
                 <hr class="primary">
                 <p>
-                    <h3 class="text-center">Tentative Schedule</h3>
+                    <h3 class="text-center">Schedule</h3>
                     <br>
                     <table class="table table-striped text-center" style="font-size: 120%">
                         <thead style="font-weight: bold">
@@ -351,66 +351,60 @@
                                 <td>7:10 AM</td>
                                 <td>10:10 AM</td>
                                 <td>3:10 PM</td>
-                                <td>Lightning Talks</td>
+                                <td>3x Lightning Talks</td>
                             </tr>
                             <tr>
-                                <td>7:20 AM</td>
-                                <td>10:20 AM</td>
-                                <td>3:20 PM</td>
+                                <td>7:25 AM</td>
+                                <td>10:25 AM</td>
+                                <td>3:25 PM</td>
                                 <td>Short Break</td>
                             </tr>
                             <tr>
-                                <td>7:30 AM</td>
-                                <td>10:30 AM</td>
-                                <td>3:30 PM</td>
+                                <td>7:35 AM</td>
+                                <td>10:35 AM</td>
+                                <td>3:35 PM</td>
                                 <td>Talks Discussion</td>
                             </tr>
                             <tr>
-                                <td>8:00 AM</td>
-                                <td>11:00 AM</td>
-                                <td>4:00 PM</td>
+                                <td>8:05 AM</td>
+                                <td>11:05 AM</td>
+                                <td>4:05 PM</td>
                                 <td><b>Invited talk: <a href="#emily-dinan" class="page-scroll" style="color: white; text-decoration: underline">Emily Dinan</a></b></td>
                             </tr>
                             <tr>
-                                <td>8:20 AM</td>
-                                <td>11:20 AM</td>
-                                <td>4:20 PM</td>
+                                <td>8:25 AM</td>
+                                <td>11:25 AM</td>
+                                <td>4:25 PM</td>
                                 <td><b>Invited talk: <a href="#aleksander-madry" class="page-scroll" style="color: white; text-decoration: underline">Aleksander Madry</a></b></td>
                             </tr>
                             <tr>
-                                <td>8:40 AM</td>
-                                <td>11:40 AM</td>
-                                <td>4:40 PM</td>
-                                <td><b>Invited talk: <a href="#quang-duong" class="page-scroll" style="color: white; text-decoration: underline">Quang Duong</a></b></td>
-                            </tr>
-                            <tr>
-                                <td>9:00 AM</td>
-                                <td>12:00 PM</td>
-                                <td>5:00 PM</td>
+                                <td>8:45 AM</td>
+                                <td>11:45 PM</td>
+                                <td>4:45 PM</td>
                                 <td>Short Break</td>
                             </tr>
                             <tr>
-                                <td>9:10 AM</td>
-                                <td>12:10 PM</td>
-                                <td>5:10 PM</td>
+                                <td>8:55 AM</td>
+                                <td>11:55 AM</td>
+                                <td>4:55 PM</td>
+                                <td><b>Invited talk: <a href="#quang-duong" class="page-scroll" style="color: white; text-decoration: underline">Quang Duong</a></b></td>
+                            </tr>
+                            <tr>
+                                <td>9:15 AM</td>
+                                <td>12:15 PM</td>
+                                <td>5:15 PM</td>
                                 <td><b>Invited talk: <a href="#peter-hallinan" class="page-scroll" style="color: white; text-decoration: underline">Peter Hallinan</a></b></td>
                             </tr>
                             <tr>
-                                <td>9:30 AM</td>
-                                <td>12:30 PM</td>
-                                <td>5:30 PM</td>
-                                <td>Lightning Talks</td>
-                            </tr>
-                            <tr>
-                                <td>9:40 AM</td>
-                                <td>12:40 PM</td>
-                                <td>5:40 PM</td>
+                                <td>9:35 AM</td>
+                                <td>12:35 PM</td>
+                                <td>5:35 PM</td>
                                 <td>Talks Discussion</td>
                             </tr>
                             <tr>
-                                <td>10:10 AM</td>
-                                <td>1:10 PM</td>
-                                <td>6:10 PM</td>
+                                <td>10:05 AM</td>
+                                <td>1:05 PM</td>
+                                <td>6:05 PM</td>
                                 <td>Wrap Up</td>
                             </tr>
                             <tr>
