--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -156,9 +156,9 @@
 </ul>
 
 <h2 id="key-dates">Key Dates</h2>
-<p><strong>October 14, 2020: Extended abstracts and short papers due (<a href="https://easychair.org/conferences/?conf=reais2020">submission on EasyChair</a>)</strong><br />
-October 18, 2020: Notification of acceptance<br />
-<strong>October 25, 2020: Rigorous Evaluation for AI Systems workshop</strong><br />
+<s>October 14, 2020: Extended abstracts and short papers due</s>
+<s>October 18, 2020: Notification of acceptance</s>
+<p><strong>October 25, 2020: Rigorous Evaluation for AI Systems workshop</strong><br />
 October 26, 2020: sister workshop, Data Excellence Workshop (<a href="http://eval.how/dew2020">link</a>)</p>
 
 <p>Workshop Authors are invited to submit extended abstracts (2-4 pages) or short papers (4-6 pages), plus any number of additional pages containing references only.</p>
