--- a/reais-2020/program.html
+++ b/reais-2020/program.html
@@ -64,17 +64,17 @@
 <h1 id="program-agenda">Program Agenda</h1>
 <p>Note from organizers: Daylight savings time changes for Amsterdam (but not yet in the US), so take care with timezone calculations. We apologize for any confusion this has caused.</p>
 
-<p>2:00pm CET / 6:00am PDT  Tech Platform Onboarding
-<br />2:10pm CET / 6:20am PDT  Introduction
-<br />2:25pm CET / 6:25am PDT  Invited Talk: José Hernández-Orallo
-<br />3:05pm CET / 7:05am PDT  Break
-<br />3:15pm CET / 7:15am PDT  NLP Invited Talks: Ellen Voorhees, João Sedoc, Courtney Napoles
-<br />4:45pm CET / 8:45am PDT  Panel discussion
-<br />5:05pm CET / 9:05am PDT  Break
-<br />5:15pm CET / 9:15am PDT  Reporting from discussions
-<br />5:20pm CET / 9:20am PDT  Invited Talk: Besmira Nushi
-<br />6:00pm CET / 10:00am PDT  Submitted Talks &amp; report generation
-<br />6:20pm CET / 10:20am PDT  Closing remarks
+<p>2:00pm CET / 6:00am PDT  <strong>Tech Platform Onboarding</strong>
+<br />2:10pm CET / 6:20am PDT  <strong>Introduction</strong>
+<br />2:25pm CET / 6:25am PDT  <strong>Invited Talk: José Hernández-Orallo</strong>
+<br />3:05pm CET / 7:05am PDT  <strong>Break</strong>
+<br />3:15pm CET / 7:15am PDT  <strong>NLP Invited Talks: Ellen Voorhees, João Sedoc, Courtney Napoles</strong>
+<br />4:45pm CET / 8:45am PDT  <strong>Panel discussion</strong>
+<br />5:05pm CET / 9:05am PDT  <strong>Break</strong>
+<br />5:15pm CET / 9:15am PDT  <strong>Reporting from discussions</strong>
+<br />5:20pm CET / 9:20am PDT  <strong>Invited Talk: Besmira Nushi</strong>
+<br />6:00pm CET / 10:00am PDT  <strong>Submitted Talks &amp; report generation</strong>
+<br />6:20pm CET / 10:20am PDT  <strong>Closing remarks</strong>
 <br />
 <br /></p>
 
