Add program to front page, participation instructions

--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -135,7 +135,22 @@
   <li>October 26, 2020: <a href="http://eval.how/dew2020/">DEW 2020</a></li>
 </ul>
 
-<p><em>Submission link: <a href="https://easychair.org/conferences/?conf=reais2020">https://easychair.org/conferences/?conf=reais2020</a></em></p>
+<h2 id="program-agenda">Program Agenda</h2>
+<p>Note from organizers: Daylight savings time changes for Amsterdam (but not yet in the US), so take care with timezone calculations. We apologize for any confusion this has caused.</p>
+
+<p>2:00pm CET / 6:00am PDT  <strong>Tech Platform Onboarding</strong>
+<br />2:10pm CET / 6:20am PDT  <strong>Introduction</strong>
+<br />2:25pm CET / 6:25am PDT  <strong>Invited Talk: José Hernández-Orallo</strong>
+<br />3:05pm CET / 7:05am PDT  <strong>Break</strong>
+<br />3:15pm CET / 7:15am PDT  <strong>NLP Invited Talks: Ellen Voorhees, João Sedoc, Courtney Napoles</strong>
+<br />4:45pm CET / 8:45am PDT  <strong>Panel discussion</strong>
+<br />5:05pm CET / 9:05am PDT  <strong>Break</strong>
+<br />5:15pm CET / 9:15am PDT  <strong>Reporting from discussions</strong>
+<br />5:20pm CET / 9:20am PDT  <strong>Invited Talk: Besmira Nushi</strong>
+<br />6:00pm CET / 10:00am PDT  <strong>Lightning Talks: Cynthia Freeman, Ian Beaver</strong>
+<br />6:20pm CET / 10:20am PDT  <strong>Closing remarks</strong>
+<br />
+<br /></p>
 
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as ImageNet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
 
@@ -156,10 +171,10 @@
 </ul>
 
 <h2 id="key-dates">Key Dates</h2>
-<s>October 14, 2020: Extended abstracts and short papers due</s>
-<s>October 18, 2020: Notification of acceptance</s>
-<p><strong>October 25, 2020: Rigorous Evaluation for AI Systems workshop</strong><br />
-October 26, 2020: sister workshop, Data Excellence Workshop (<a href="http://eval.how/dew2020">link</a>)</p>
+<p><del>October 14, 2020: Extended abstracts and short papers due</del>
+<br /><del>October 18, 2020: Notification of acceptance</del>
+<br /><strong>October 25, 2020: Rigorous Evaluation for AI Systems workshop</strong>
+<br />October 26, 2020: sister workshop, Data Excellence Workshop (<a href="http://eval.how/dew2020">link</a>)</p>
 
 <p>Workshop Authors are invited to submit extended abstracts (2-4 pages) or short papers (4-6 pages), plus any number of additional pages containing references only.</p>
 
