--- a/reais-2020/program.html
+++ b/reais-2020/program.html
@@ -61,6 +61,13 @@
   </nav>
 </header>
 
+<h1 id="participating">Participating</h1>
+<p>Join REAIS Slack workspace: <a href="http://bit.ly/reais-2020-slack">http://bit.ly/reais-2020-slack</a></p>
+
+<p>You should receive an invitation to join Underline via email with the subject “Welcome to HCOMP 2020” after registering for the conference and/or workshops. Click that link to sign up for Underline and view the conference.</p>
+
+<p>Having trouble? Ask in <strong>#ask-for-help-here</strong> channel in REAIS 2020 Slack.</p>
+
 <h1 id="program-agenda">Program Agenda</h1>
 <p>Note from organizers: Daylight savings time changes for Amsterdam (but not yet in the US), so take care with timezone calculations. We apologize for any confusion this has caused.</p>
 
@@ -73,7 +80,7 @@
 <br />5:05pm CET / 9:05am PDT  <strong>Break</strong>
 <br />5:15pm CET / 9:15am PDT  <strong>Reporting from discussions</strong>
 <br />5:20pm CET / 9:20am PDT  <strong>Invited Talk: Besmira Nushi</strong>
-<br />6:00pm CET / 10:00am PDT  <strong>Submitted Talks &amp; report generation</strong>
+<br />6:00pm CET / 10:00am PDT  <strong>Lightning Talks: Cynthia Freeman, Ian Beaver</strong>
 <br />6:20pm CET / 10:20am PDT  <strong>Closing remarks</strong>
 <br />
 <br /></p>
