DEW2020: Add Ben Hutchinson's bio and talk info

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -664,15 +664,15 @@
                 <br>
                 <h2 class="section-heading text-center"><a href="https://www.linkedin.com/in/ben-hutchinson-ab56464/" target="_blank" style="color: white">Ben Hutchingson (Google Research)</a></h2>
                 <hr class="light">
-                <h3 class="text-center">Title: TBD</h3><br>
+                <h3 class="text-center">Towards Accountability for Machine Learning Datasets: Lessons from Software Engineering</h3><br>
                 <p>
-                    Abstract: TBD
+                    Rising concern for the societal implications of artificial intelligence systems has inspired demands for greater transparency and accountability. However the datasets which empower machine learning are often used, shared and re-used with little visibility into the processes of deliberation which led to their creation. In this talk, I introduce a rigorous framework for dataset development transparency which supports decision-making and accountability. The framework uses the cyclical, infrastructural and engineering nature of dataset development to draw on best practices from the software development lifecycle. Each stage of the data development lifecycle yields a set of documents that facilitate improved communication and decision-making, as well as drawing attention to the value and necessity of careful data work. The proposed framework is intended to contribute to closing the accountability gap in artificial intelligence systems, by making visible the often overlooked work that goes into dataset creation.
                 </p>
-                <!-- <hr class="primary">
+                <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
                 <p>
-                    Bio content
-                </p> -->
+                    Ben Hutchinson is a Senior Engineer in Google Research, working on artificial intelligence, dataset development practices, data ethics, fairness, and accountability. His research focuses on incorporating knowledge and practices from a variety of engineering and social science disciplines in order to inform the ethical development of AI. Prior to joining Google Research, he spent ten years writing code for a variety of products such as Google Maps, Knowledge Graph, and Google Search. He uses this engineering experience to help bridge the gaps between research and engineering, and between theory and practice.
+                </p>
             </div>
         </div>
     </div>
