--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ Data is critical for building and testing AI/ML systems. This page gathers resou
 
 Please fill out this one minute <a href="https://docs.google.com/forms/d/1e-ZkasJ2Xpl-MD5Msi0-5cQru05Zid2GOoCENCWqibk/edit?ts=5fd2df15&gxids=7628">data interest survey</a> if you are interested in this community and join the mailing list. 
 <br>
-<b>Subscribe to the data excellence mailing list, or email data-excellence+subscribe AT googlegroups.com</b>
+<b>Subscribe to the <a href="https://groups.google.com/g/data-excellence">data excellence mailing list</a>, or email data-excellence+subscribe AT googlegroups.com</b>
 </body>
 </html>
