--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Data is critical for building and testing AI/ML systems. This page gathers resou
   <li><a href="https://sadworkshop.wordpress.com/2018-edition/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2018 </a></li>
 <li><a href="https://sadworkshop.wordpress.com/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2019 </a></li>
   <li><a href="reais-2019.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2019 </a></li>
-  <li><a href="hcomp2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
+  <li><a href="reais-2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
   <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
   <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a></li>
   </ul>
