--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -419,9 +419,9 @@
                 <br>
                 <h3 id="papers" class="text-center">Accepted Papers</h3><br>
                 <ul style="font-size: 120%">
-                    <li><b>Reducing Annotation Artifacts in Crowdsourcing Datasets for Natural Language Processing</b><br><i>Donghoon Han, Juho Kim and Alice Oh</i><br><br></li>
-                    <li><b>Machine Learning Training to Support Diversity of Opinion</b><br><i>Johanne Christensen and Benjamin Watson</i><br><br></li>
-                    <li><b>Data Desiderata: Reliability and Fidelity in High-stakes AI</b><br><i>Shivani Kapania, Nithya Sambasivan, Kristen Olson, Hannah Highfill, Diana Akrong, Praveen Paritosh and Lora Aroyo</i><br><br></li>
+                    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_1%20(1).pdf" target="_blank"><b>Reducing Annotation Artifacts in Crowdsourcing Datasets for Natural Language Processing</b></a><br><i>Donghoon Han, Juho Kim and Alice Oh</i><br><br></li>
+                    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_2%20(1).pdf" target="_blank"><b>Machine Learning Training to Support Diversity of Opinion</b></a><br><i>Johanne Christensen and Benjamin Watson</i><br><br></li>
+	    	    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_3%20(1).pdf" target="_blank"><b>Data Desiderata: Reliability and Fidelity in High-stakes AI</b></a><br><i>Shivani Kapania, Nithya Sambasivan, Kristen Olson, Hannah Highfill, Diana Akrong, Praveen Paritosh and Lora Aroyo</i><br><br></li>
                 </ul>
                 <br>
                 <h3 id="invited-talks" class="text-center">Invited Talks</h3><br>
