--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DEW 2020 - 1st Data Excellence Workshop</title>
+    <title>DCAI2021 - 1st Data-Centric AI Workshop</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -80,16 +80,16 @@
   <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>1st Data Excellence Workshop (DEW 2020)</h1>
+            <h1>1st Data-Centric AI Workshop (DCAI 2021)</h1>
             <hr>
             <p>
-            	<a href="https://www.humancomputation.com" target="_blank"><b>At the 8th AAAI Conference on Human Computation and Crowdsourcing</b></a><br><br>
+            	<a href="https://neurips.cc/Conferences/2021/" target="_blank"><b>At the 35th NeurIPS Conference</b></a><br><br>
                 <span style="color: white;">
-            	<b>Date:</b> 26 October 2020<br>
+            	<b>Date:</b> 6 December 2021<br>
                 <b>Time PT:</b> 6:00am-10:20am<br>
                 <b>Time EST:</b> 9:00am-1:20pm<br>
                 <b>Time CET:</b> 2:00pm-6:20pm<br>
-				<b>Location:</b> Virtual
+		<b>Location:</b> Virtual
                 </span>
 			</p>
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
