--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -46,7 +46,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">DEW 2020</a>
+            <a class="navbar-brand page-scroll" href="#page-top">DCAI 2021</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -106,13 +106,13 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-<p> MLCommons accelerates machine learning innovation to benefit everyone. Machine learning has tremendous potential to save lives in areas like healthcare and automotive safety and to improve information access and understanding through technologies like voice interfaces, automatic translation, and natural language processing. However, machine learning is entirely unlike conventional software -- developers train an application rather than program it -- and requires a whole new set of techniques analogous to the breakthroughs in precision measurement, raw materials, and manufacturing that drove the industrial revolution. MLCommons aims to answer the nascent machine learning industry's needs through open, collaborative engineering in three areas: benchmarks, datasets, and best practices. MLCommons Research (MLCR) explores research questions that advance ML innovation that benefits from MLCommons artifacts (benchmarks, datasets and best practices) and activities (working group meetings and other collaborations). During this inaugural year, MLCR is soliciting research proposals for groundbreaking research and engineering related to advancing the creation of open-source data sets. Specifically, MLCommons Research is interested in accelerating the development of open-source data sets via principled data engineering methods. </p>
+		    <p> <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> accelerates machine learning innovation to benefit everyone. Machine learning has tremendous potential to save lives in areas like healthcare and automotive safety and to improve information access and understanding through technologies like voice interfaces, automatic translation, and natural language processing. However, machine learning is entirely unlike conventional software -- developers train an application rather than program it -- and requires a whole new set of techniques analogous to the breakthroughs in precision measurement, raw materials, and manufacturing that drove the industrial revolution. <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> aims to answer the nascent machine learning industry's needs through open, collaborative engineering in three areas: benchmarks, datasets, and best practices. MLCommons Research (MLCR) explores research questions that advance ML innovation that benefits from MLCommons artifacts (benchmarks, datasets and best practices) and activities (working group meetings and other collaborations). During this inaugural year, MLCR is soliciting research proposals for groundbreaking research and engineering related to advancing the creation of open-source data sets. Specifically, MLCommons Research is interested in accelerating the development of open-source data sets via principled data engineering methods. </p>
 
-<p>The ML community has a strong track record of building data sets. But this endeavor is often artisanal—painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building data sets easier, cheaper and more repeatable. Constructing a data set today is akin to programming before the era of compilers, libraries and other tools. So, the challenge ML Commons puts forth is whether we can accelerate data-set creation by democratizing data engineering—that is, building computer systems (“architectures”) that can automatically produce training data cheaply and efficiently. Please refer to our data engineering white paper (https://arxiv.org/pdf/2102.11447.pdf) for more information. </p>
+<p>The ML community has a strong track record of building data sets. But this endeavor is often artisanal—painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building data sets easier, cheaper and more repeatable. Constructing a data set today is akin to programming before the era of compilers, libraries and other tools. So, the challenge ML Commons puts forth is whether we can accelerate data-set creation by democratizing data engineering—that is, building computer systems (“architectures”) that can automatically produce training data cheaply and efficiently. Please refer to our <a href="https://arxiv.org/pdf/2102.11447.pdf" target="_blank">data engineering white paper</a> for more information. </p>
 
 <p>Applicants should submit a plan outlining the impact their research is intended to produce, how the research area will gain from the work, a timeline for the project, and a budget summary of how to use the proposed funding. Proposals are strongly encouraged to concentrate on supporting Ph.D. students. Proposals from small collaborative teams are also strongly encouraged, especially with PIs that bridge machine learning from theory to practice.</p>
 
-<p>MLCommons plans to award four to six four unrestricted gift awards, depending on criteria, up to $50,000 each. Awards are structured as unrestricted gifts to the principal investigator's academic institution or organization and as such, MLCommons retains no intellectual property rights to the resulting work. Recipients are encouraged to publish outcomes and commit related code to open-source repositories. Recipients are assigned an MLCommons research contact who offers consultation and advice along with opportunities to participate in MLCommons events and training sessions.</p>
+<p>MLCommons plans to award four to six four unrestricted gift awards, depending on criteria, up to $50,000 each. Awards are structured as unrestricted gifts to the principal investigator's academic institution or organization and as such, <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> retains no intellectual property rights to the resulting work. Recipients are encouraged to publish outcomes and commit related code to open-source repositories. Recipients are assigned an MLCommons research contact who offers consultation and advice along with opportunities to participate in <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> events and training sessions.</p>
 
 		    
 		    </p>
@@ -126,12 +126,7 @@
                     </ul>
                     </p>
 
-                    <p>This year, the DEW workshop will run a <u><b>joint program with REAIS 2020 across two days</b></u>:
-                    <ul style="font-size: 150%">
-                        <li>Oct 25, 2020: <a href="http://eval.how/reais-2020/" target="_blank">REAIS 2020</a></li>
-                        <li>Oct 26, 2020: <a href="http://eval.how/dew2020/" target="_blank">DEW 2020</a></li>
-                    </ul>
-                    </p>
+                     </p>
                 </p>
             </div>
         </div>
