--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -114,14 +114,6 @@ We will seek to drive progress in addressing these core problems by promoting th
 
 A huge amount of innovation — in algorithms, ideas, principles, and tools — is needed to make data-centric AI development efficient and effective. We hope that this workshop will help spark that innovation.
 
-<p> <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> accelerates machine learning innovation to benefit everyone. Machine learning has tremendous potential to save lives in areas like healthcare and automotive safety and to improve information access and understanding through technologies like voice interfaces, automatic translation, and natural language processing. However, machine learning is entirely unlike conventional software -- developers train an application rather than program it -- and requires a whole new set of techniques analogous to the breakthroughs in precision measurement, raw materials, and manufacturing that drove the industrial revolution. <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> aims to answer the nascent machine learning industry's needs through open, collaborative engineering in three areas: benchmarks, datasets, and best practices. MLCommons Research (MLCR) explores research questions that advance ML innovation that benefits from MLCommons artifacts (benchmarks, datasets and best practices) and activities (working group meetings and other collaborations). During this inaugural year, MLCR is soliciting research proposals for groundbreaking research and engineering related to advancing the creation of open-source data sets. Specifically, MLCommons Research is interested in accelerating the development of open-source data sets via principled data engineering methods. </p>
-
-<p>The ML community has a strong track record of building data sets. But this endeavor is often artisanal—painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building data sets easier, cheaper and more repeatable. Constructing a data set today is akin to programming before the era of compilers, libraries and other tools. So, the challenge ML Commons puts forth is whether we can accelerate data-set creation by democratizing data engineering—that is, building computer systems (“architectures”) that can automatically produce training data cheaply and efficiently. Please refer to our <a href="https://arxiv.org/pdf/2102.11447.pdf" target="_blank">data engineering white paper</a> for more information. </p>
-
-<p>Applicants should submit a plan outlining the impact their research is intended to produce, how the research area will gain from the work, a timeline for the project, and a budget summary of how to use the proposed funding. Proposals are strongly encouraged to concentrate on supporting Ph.D. students. Proposals from small collaborative teams are also strongly encouraged, especially with PIs that bridge machine learning from theory to practice.</p>
-
-<p>MLCommons plans to award four to six four unrestricted gift awards, depending on criteria, up to $50,000 each. Awards are structured as unrestricted gifts to the principal investigator's academic institution or organization and as such, <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> retains no intellectual property rights to the resulting work. Recipients are encouraged to publish outcomes and commit related code to open-source repositories. Recipients are assigned an MLCommons research contact who offers consultation and advice along with opportunities to participate in <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> events and training sessions.</p>
-
 		    
 		    </p>
                     <p>This workshop continues a series of <u><b>preceding workshops on related topics</b></u>:
@@ -197,26 +189,20 @@ A huge amount of innovation — in algorithms, ideas, principles, and tools — 
                 <h2 class="section-heading text-center">Call for Papers</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    Decades of catastrophic failures within high-stakes software projects (e.g., explosions of billion dollar spacecrafts in the 60s and 90s due to floating point overflows and missing hyphens in source code) have burnt the vital importance of upfront investments in <span style="color: white; font-weight: bold">software engineering excellence</span> into our collective memory. It was through careful post-hoc analysis of these kinds of disasters that software engineering has matured as a field and achieved a more robust understanding of the costs and benefits that come with: <span style="color: white; font-weight: bold">processes</span> like systematic code reviews, <span style="color: white; font-weight: bold">standards</span> like coding conventions and design patterns, <span style="color: white; font-weight: bold">infrastructure</span> for debugging and experimentation, as well as <span style="color: white; font-weight: bold">incentive structures</span> that prioritize careful quality control over hasty roll-outs.
-                </p>
-                <p class="text-faded">
-                    With the rise of artificial intelligence <span style="color: white; font-weight: bold">human-labeled data</span> has increasingly become the fuel and compass of AI-based software systems. However, an analogous framework for <span style="color: white; font-weight: bold">excellence in data engineering</span> does not yet exist, bearing the risk of similarly disastrous catastrophes to arise from the use of insufficient datasets in AI-based software systems.
-                </p>
+<a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> accelerates machine learning innovation to benefit everyone. Machine learning has tremendous potential to save lives in areas like healthcare and automotive safety and to improve information access and understanding through technologies like voice interfaces, automatic translation, and natural language processing. However, machine learning is entirely unlike conventional software -- developers train an application rather than program it -- and requires a whole new set of techniques analogous to the breakthroughs in precision measurement, raw materials, and manufacturing that drove the industrial revolution. <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> aims to answer the nascent machine learning industry's needs through open, collaborative engineering in three areas: benchmarks, datasets, and best practices. MLCommons Research (MLCR) explores research questions that advance ML innovation that benefits from MLCommons artifacts (benchmarks, datasets and best practices) and activities (working group meetings and other collaborations). During this inaugural year, MLCR is soliciting research proposals for groundbreaking research and engineering related to advancing the creation of open-source data sets. Specifically, MLCommons Research is interested in accelerating the development of open-source data sets via principled data engineering methods. </p>
+
+<p>The ML community has a strong track record of building data sets. But this endeavor is often artisanal—painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building data sets easier, cheaper and more repeatable. Constructing a data set today is akin to programming before the era of compilers, libraries and other tools. So, the challenge ML Commons puts forth is whether we can accelerate data-set creation by democratizing data engineering—that is, building computer systems (“architectures”) that can automatically produce training data cheaply and efficiently. Please refer to our <a href="https://arxiv.org/pdf/2102.11447.pdf" target="_blank">data engineering white paper</a> for more information. </p>
+
+<p>Applicants should submit a plan outlining the impact their research is intended to produce, how the research area will gain from the work, a timeline for the project, and a budget summary of how to use the proposed funding. Proposals are strongly encouraged to concentrate on supporting Ph.D. students. Proposals from small collaborative teams are also strongly encouraged, especially with PIs that bridge machine learning from theory to practice.</p>
+
+<p>MLCommons plans to award four to six four unrestricted gift awards, depending on criteria, up to $50,000 each. Awards are structured as unrestricted gifts to the principal investigator's academic institution or organization and as such, <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> retains no intellectual property rights to the resulting work. Recipients are encouraged to publish outcomes and commit related code to open-source repositories. Recipients are assigned an MLCommons research contact who offers consultation and advice along with opportunities to participate in <a href="https://mlcommons.org/en/" target="_blank">MLCommons</a> events and training sessions.</p>
                 <p>
-                    <b>
-                    This workshop aims to leverage lessons learned from decades of excellence in software engineering to inspire and enable an analogous framework for data excellence in AI systems.
-                    </b>
+Our goal is to define the core problems and create ways to measure progress in Data Centric AI.  For this purpose we aim at a discussion-centric workshop schedule, which will allow good coverage of existing work through short-form presentations (5 min recorded lightning talks) and breakout sessions (mix of submitted/live questions for the speakers), which will be concluded with a group discussion and question answering session, summarized and published by a scribe. We believe this will help us expand the understanding of where we stand and what are future directions in the field.
+
+One novel aspect of our program is a collaboration by our team on a proposal for a new data centric AI competition.  To help define Data Centric AI, the invited talks will mix research with case studies of data centric AI problems from industry, including startups (Landing AI and Snorkel AI) and large companies (Google and Facebook).  They will also highlight insights from the first generation of Data Centric AI competitions, including the winning submissions, the key insights, and invite the community to shape the future of Data Centric AI competitions.  
+
                 </p>
-                <p class="text-faded">
-                    <span style="color: white">The outcomes of this workshop will be:</span>
-                    <ul>
-                        <li>defining properties and metrics of data excellence</li>
-                        <li>gathering and reviewing various case studies of data excellence and data catastrophes</li>
-                        <li>building a catalog of best practices and incentive structures for data excellence</li>
-                        <li>discussing the cost-benefit trade-off for investments in data excellence</li>
-                        <li>gathering and reviewing empirical and theoretical methodologies for reliability, validity, maintainability, fidelity of data</li>
-                    </ul>
-                </p>
+               
                 <p class="text-faded">
                     We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop.
                 </p>
@@ -231,13 +217,10 @@ A huge amount of innovation — in algorithms, ideas, principles, and tools — 
                 <p class="text-faded">
                     We invite scientific contributions and positions papers on the following topics:
 
-                    <p class="text-faded"><span style="color: white; font-weight: bold">Maintainability</span>: Maintaining data at scale, e.g., Knowledge Graph [Bollacker et al, 2008] has similar challenges to maintaining software at scale, or potentially knowledge engineering. Data engineering often refers to data munging tasks, and is far more important and challenging that has been appreciated thus far. The fastest thing to do isn’t the most maintainable or reusable:
+                    <p class="text-faded"><span style="color: white; font-weight: bold">New Datasets</span>:  in areas that align with MLCommons:
                     <ul class="text-faded">
-                      <li>What lessons for maintaining data at scale could we learn or adapt from software and knowledge engineering at scale?</li>
-                      <li>Methods and tools for data documentation (e.g., [Gebru, 2018]), management of owners/maintainers, forking/replication</li>
-                      <li>Data should be not abandoned, should not be disposable</li>
-                      <li>What if it is a one-off dataset?</li>
-                        <ul>      
+                      <li>Speech, medical, recommendation/personalization</li>
+                      <li>Science: <a href="https://www.mgi.gov/" target="_blank" https://www.mgi.gov/</a></li><ul>      
                           <li>There is no good software that is abandoned.</li> 
                           <li>Even a one-off dataset requires maintenance over time, extension to other languages, addition of new word pairs, updates, scrutiny.</li>
                           <li>How do we help other people to contribute to growing and improving this data</li>
