--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -272,23 +272,20 @@ One novel aspect of our program is a collaboration by our team on a proposal for
                 <h2 class="section-heading">Organizing Committee</h2>
                 <hr class="light">
                 <p>
-                    Praveen Paritosh, Google<br>
-                    Matt Lease, Amazon and UT Austin<br>
-                    Mike Schaekermann, Amazon and University of Waterloo<br>
-                    Lora Aroyo, Google<br>
+                    Andrew Ng, Landing AI
+		    Lora Aroyo, Google Research
+		    Cody Coleman, Stanford University
+		    Greg Diamos, Landing AI
+		    Vijay Janapa Reddi, Harvard University
+		    Joaquin Vanschoren, Eindhoven University of Technology
+		    Sharon Zhou, Stanford University
                 </p>
                 <br>
                 <br>
                 <h2 class="section-heading">Program Committee</h2>
                 <hr class="light">
                 <p>
-                    Chris Welty, Google Research<br>
-                    Ana Rogers, University of Copenhagen<br>
-                    Omar Alonso, Curai<br>
-                    Markus Krause, Brainworks<br>
-                    Juho Kim, KAIST<br>
-                    Alex Quinn, Purdue University<br>
-                    Owen Rambow, Elemental Cognition<br>
+                    TDB
                 </p>
             </div>
         </div>
